--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-"Hola mundo" 
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Alibi : Mobilis in Mobili" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Alibi</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/cecuesta">View on GitHub</a>
+
+          <h1 id="project_title">Alibi</h1>
+          <h2 id="project_tagline">Mobilis in Mobili</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="this-is-just-a-placeholder" class="anchor" href="#this-is-just-a-placeholder"><span class="octicon octicon-link"></span></a>This is just a placeholder</h3>
+
+<p>More content here soon - as soon as I am able to :-)</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
