--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Alibi : Mobilis in Mobili" />
+    <meta name="description" content="Lathe Biosas : Hysteron proteron" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Alibi</title>
+    <title>Lathe Biosas</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cecuesta">View on GitHub</a>
 
-          <h1 id="project_title">Alibi</h1>
-          <h2 id="project_tagline">Mobilis in Mobili</h2>
+          <h1 id="project_title">Lathe Biosas</h1>
+          <h2 id="project_tagline">Hysteron proteron</h2>
 
         </header>
     </div>
