--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Lathe Biosas : Hysteron proteron" />
+    <meta name="description" content="Nusquam : Hysteron proteron" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Lathe Biosas</title>
+    <title>Nusquam</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cecuesta">View on GitHub</a>
 
-          <h1 id="project_title">Lathe Biosas</h1>
+          <h1 id="project_title">Nusquam</h1>
           <h2 id="project_tagline">Hysteron proteron</h2>
 
         </header>
