--- a/cpiicyl/entrevista-cecq.htm
+++ b/cpiicyl/entrevista-cecq.htm
@@ -431,8 +431,10 @@ medicina. En éstas no son infrecuentes incluso las sagas familiares; en
 nuestro campo hablamos de algo que hasta los 70 ni siquiera existía. 
 Además, por supuesto todos conocemos un montón de casos de colegas, 
 excelentes profesionales del sector, que proceden de otros campos o que 
-tienen una formación diferente, para los que la informática fue un descubrimiento más tardío. Y aun así, diría que 
+tienen una formación diferente, para los que la informática fue un 
+descubrimiento más tardío. Y aun así, diría que 
 somos también muchos los que lo tuvimos claro desde muy jóvenes.</p>
+
 <p>Digo todo esto porque yo sabía desde muy pequeño que quería ser 
 informático. Y visto en retrospectiva no deja de resultar curioso, pero 
 recuerdo exactamente el momento en que decidí que quería estudiar 
