Corrigiendo gaps en entrevista

--- a/cpiicyl/entrevista-cecq.htm
+++ b/cpiicyl/entrevista-cecq.htm
@@ -495,8 +495,8 @@ Información, el mismo donde está ahora la sede del Colegio. Ser profesor
 carrera poco sorprendente. Me temo que esto nos pasa a muchos de los 
 académicos, que por definición tenemos que tender a la estabilidad. En 
 mis años como profesor en la Universidad de Valladolid, viví la 
-fundación de la Escuela Técnica Superior de Ingeniería Informática, una</p>
-<p>aspiración de muchos años por fin cumplida. Visité el mítico Imperial
+fundación de la Escuela Técnica Superior de Ingeniería Informática, una
+aspiración de muchos años por fin cumplida. Visité el mítico Imperial
  College de Londres. Leí mi tesis doctoral, y recibí el Premio 
 Extraordinario de Doctorado. Comencé mi colaboración de investigación 
 con la Universidad Politécnica de Valencia, que ha durado casi una 
@@ -559,10 +559,10 @@ Universidad es muy distinto de un profesor de Secundaria. Para empezar,
 tus alumnos son adultos, y se espera de ti que los trates como tales. No
  puedes conformarte con ideas simples, o con repetir siempre el mismo 
 esquema: al final, se supone que la Universidad es la vanguardia... no 
-es solamente que tengas que reciclarte</p>
-<p>(éso lo tenemos que hacer todos los informáticos constantemente), es 
-que tienes que prever la evolución y adelantarte a ella, si puedes. Por 
-supuesto, a menudo puedes equivocarte.</p>
+es solamente que tengas que reciclarte (éso lo tenemos que hacer todos 
+los informáticos constantemente), es que tienes que prever la evolución 
+y adelantarte a ella, si puedes. Por supuesto, a menudo puedes equivocarte.</p>
+
 <p>Idealmente, la docencia y la investigación están muy ligadas. No 
 siempre es cierto: no siempre tienes la ocasión de enseñar la misma 
 asignatura en la que investigas. En ese sentido, yo soy un privilegiado,
