--- a/research.html
+++ b/research.html
@@ -2,6 +2,7 @@
 layout: page
 title: Research
 permalink: /research/
+#cover: "assets/unsplash_notebook.jpg"
 ---
 
 <p> This page to be filled... </p>
